vlib/v/parser/tests/closure_not_declared.out
vlib/v/parser/tests/closure_not_declared.vv:4:9: error: undefined ident: `a`
    2 |     a := 1
    3 |     f := fn () {
    4 |         print(a)
      |               ^
    5 |     }
    6 |     f()
